cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_26220_positive3.json
{
  "Resources": {
    "Positive1_security_group": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable SSH access via port 22",
        "VpcId": {
          "Ref": "MyVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "-1",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "Positive1_ingress_ipv4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "Positive1_security_group"
        },
        "IpProtocol": "tcp",
        "FromPort": 0,
        "ToPort": 100,
        "CidrIp": "0.0.0.0/0"
      }
    },
    "Positive1_ingress_ipv6": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "Positive1_security_group"
        },
        "IpProtocol": "udp",
        "FromPort": 2000,
        "ToPort": 2060,
        "CidrIpv6": "::/0"
      }
    }
  }
}
